--- a/index.html
+++ b/index.html
@@ -1,68 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
+	<!-- Open Sans -->
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
 
-	<link href="//vjs.zencdn.net/4.12/video-js.css" rel="stylesheet">
-	<script src="//vjs.zencdn.net/4.12/video.js"></script>
+	<!-- CSS -->
+	<link href='//vjs.zencdn.net/4.12/video-js.css' rel='stylesheet'>
+	<link href='style.css' rel='stylesheet' />
 
-	<link href="style.css" rel="stylesheet" />
-	<script src="script.js"></script>
 </head>
 <body>
-	<audio autoplay loop>
-		<source src="audio.ogg" type="audio/ogg" />
-		<source src="audio.mp3" type="audio/mpeg" />
-		<source src="audio.wav" type="audio/wave" />
-		<source src="audio.wav" type="audio/x-wav" />
-		<source src="audio.flac" type="audio/flac" />
-	</audio>
-	<video id="video" class="video-js vjs-default-skin" width="100%" height="100%" data-setup='{"controls": false, "preload": "auto"}'>
-		<source src="video.mp4" type="video/mp4" />
-		<source src="video.webm" type="video/webm" />
-		<source src="video.ogv" type="video/ogg" />
-	</video>
-	<div id="intro-container" class="valign-container">
-		<div class="valign">
-			<h1 id="intro-text">Hi. Make some noise.</h1>
-		</div>
-	</div>
-	<div id="outro-container" class="valign-container">
-		<div class="valign">
-			<h1 id="outro-text">It's great to be with you here in Reykjavik!</h1>
-		</div>
-	</div>
-	<div id="overlay">
-		<div id="settings">
-			<div>
-				<label>Threshold</label>
-				<input id="sensitivity" type="range" />
-			</div>
-			<div>
-				<label>Speed</label>
-				<input id="speed" type="range" />
-			</div>
-		</div>
-		<div id="credits" class="valign-container">
-			<div class="valign">
-				<h1>Video by the Kissinger Twins</h1>
-				<h1>Software by BBH Maker Lab</h1>
-				<h1>Copywriting by Pete Callaghan</h1>
-			</div>
-		</div>
-		<div id="restartButtonContainer" class="valign-container">
-			<div class="valign-bottom">
-				<button id="restartButton">Restart</button>
-			</div>
-		</div>
-		<div id="creditsButtonContainer" class="valign-container">
-			<div class="valign-bottom">
-				<button id="creditsButton">Credits</button>
-			</div>
-		</div>
-		<div id="fullscreenButtonContainer">
-			<button id="fullscreenButton">Fullscreen</button>
-		</div>
-	</div>
+	<script>
+	window.fbAsyncInit = function() {
+		FB.init({
+			appId      : 'your-app-id',
+			xfbml      : true,
+			version    : 'v2.4'
+		});
+	};
+
+	(function(d, s, id){
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) {return;}
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/en_US/sdk.js";
+		fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));
+	</script>
+
+	<div id='root'></div>
+
+	<!-- jQuery -->
+	<script src='vendor/jquery/jquery.js'></script>
+
+	<!-- React -->
+	<script src='vendor/react/react.js'></script>
+	<script src='vendor/react/Flux.js'></script>
+	<script src='vendor/react/m.js'></script>
+
+	<!-- Video.js -->
+	<script src='//vjs.zencdn.net/4.12/video.js'></script>
+
+	<!-- Screenfull -->
+	<script src='vendor/screenfull/screenfull.js'></script>
+
+	<!-- Custom -->
+	<script src='components/build/App.js'></script>
+	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </body>
 </html>
