--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
+	<!--[if lt IE 9]>
+	<script>
+		worseThanIE9 = true;
+		alert('The browser currently used is too old to run this website. Try Chrome, Firefox, or Internet Explorer 9+.');
+	</script>
+	<![endif]-->
+
 	<!-- Open Sans -->
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
 
 	<!-- CSS -->
 	<link href='//vjs.zencdn.net/4.12/video-js.css' rel='stylesheet'>
 	<link href='style.css' rel='stylesheet' />
-
 </head>
 <body>
 	<script>
