--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	</script>
 	<![endif]-->
 
+	<!-- Mobile -->
+	<meta name='viewport' content='width=device-width,initial-scale=1' />
+
 	<!-- Open Sans -->
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
 
